# grok

./: .gitignore  Cargo.toml  Makefile  README.md  error.json  foo
grok_cli/: Cargo.toml
grok_cli/src/: main.rs
grok_lib/: Cargo.toml
grok_lib/src/: lib.rs
grok_lib/src/log_json/: mod.rs  module_json.rs
src/: json.rs  main.rs
